@@ -1,3 +1,7 @@
+2251.	[doc]		Update memstatistics-file documentation to reflect
+			reality. Note there is behaviour change for BIND 9.5.
+			[RT #17113]
+
 2249.   [bug]           Only set Authentic Data bit if client requested
                         DNSSEC, per RFC 3655 [RT #17175]
 
